TestWebKitAPI.WebKit.QuotaDelegate flaky times out https://bugs.webkit.org/show_bug.cgi?id=214842

Reviewed by Geoffrey Garen.

Source/WebKit:

Add some release logging.

* UIProcess/Network/NetworkProcessProxy.cpp:
(WebKit::NetworkProcessProxy::requestStorageSpace):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/StorageQuota.mm:
In case the page is not visible, quota increase delegate will be denied.
Delay the cache storage hence the quota increase until the page is visible.


Canonical link: https://commits.webkit.org/227736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265035 268f45cc-cd09-0410-ab3c-d52691b4dbfc